assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@300&family=Josefin+Slab:wght@300&family=Lora&display=swap');

*{
    margin: 0;
    padding: 0;
    border: none;
}

body {
    font-family: Josefin Slab, sans-serif;
    font-weight: bold;
    color: #337ca0ff;
}

/* Colour Variation */

:root { 
    --liver-dogs: #aa6c39ff; 
    --claret: #840032ff; 
    --platinum: #e6e6e9ff;
    --white: #fafafa; 
    --black-chocolate: #0c120cff; 
    --celadon-blue: #337ca0ff;
}

/* Logo and Headings Style */

h1, h2 {
    font-family: Josefin Slab, sans-serif;
    font-weight: 400;
    text-transform: uppercase;
    letter-spacing: 5px;
    color: #840032ff;
}

#sitelogo {
    float: left;

    font-size: 300%;
    font-family: Lora, sans-serif;

    margin-left: 30px;
    
}

/* Navigation CSS */

#nav-menu {
    font-size: 120%;
    letter-spacing: 5px;
}

#nav-menu ul {
    float: right;
}

#nav-menu li {
    float: left;

    margin-left: 110px;
    padding-left: 60px;

    list-style-type: none;
}

#nav-menu a {
    text-decoration: none;
    color: inherit;
    font-weight: 800;
}

#nav-menu, #sitelogo {
    line-height: 75px;
}

#nav-menu a:hover {
    border-bottom: 2px dashed #840032ff;
}

.active {
    border-bottom: 2px solid #840032ff;
}

/* Hero Image & Text */

#hero-image-text, #hero-image-text h2 {
/* This tone of white is a better match for the colour scheme than basic #fff */
    color: #e6e6e9ff;
}

#hero-image-text {
    font-size: 100%;
    font-family: Josefin Slab, Times New Roman, sans-serif;
    text-transform: uppercase;
    letter-spacing: 5px;
    text-align: center;

    border-color: #e6e6e9ff;
    border-style: double;

/* Lines 79-87 style and position background for text. */
    bottom: 60px;
    right: 120px;
    padding: 20px;

    background-color: rgba(170, 108, 57, 0.9);

    position: absolute;
}

#craftworks-big {
    font-size: 50px;
}

#hero-section {
    height: 60vh;
    width: 100%;
    overflow: hidden;
    position: relative;
}

#hero-image {
    height: 60vh;
    width: 100%;

    background-image: url(../images/hero_image.jpg);
    background-position: top center;
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;

    /* Lines 83-86 add a zoom-in effect to the hero image */
    animation-name: heroimage-zoom;
    animation-duration: 10s;
    animation-fill-mode: forwards;
}

/* Hero Image CSS Animation (Took inspiration from the Love Running Project) */

@keyframes heroimage-zoom {
    from {
        transform: scale(1);
    }
    to {
        transform: scale(1.1)
    }
}

/*Company Ethos*/

.welcome-header {
    text-align: center;
    margin: 50px;
    font-size: 300%;
}

#company-ethos {
    height: 500px;
}

hr {
    border-top: 3px dashed #840032ff;
    width: 100%;
    margin-bottom: 10px;
}

#left-ethos {
    padding-top: 30px;
    width: 33%;
    float: left;
}

#right-ethos {
    padding-top: 30px;
    width: 33%;
    float: right;
}

#center-ethos {
    padding-top: 30px;
    width: 33%;
    margin: 0 auto;
}

.left-ethos-heading, .right-ethos-heading {
    width: 60%;
    float: right;
    line-height: 30px;
    clear: both;
    margin-bottom: 50px;

    color: #0c120cff;
}

.right-ethos-heading {
    float: left;
}

.center-ethos-heading {
    width: 300px;
    height: 300px;
    padding: 30px;
    line-height: 30px;
    margin: -30px auto;

    color: #0c120cff;
}

/* Homepage Information Card (Took inspiration from the Happy Dog Cafe Project, Adam Gilroy/adamgilroy22) */

#info-section {
    padding: 30px;
}

#info-section hr {
    border-top: 3px dashed #e6e6e9ff;
    width: 100%;
    margin-bottom: 10px;
}

#info-section-header {
    font-size: 300%;
    text-align: center;
    margin: 20px;
    padding-bottom: 50px;
}

#info-card {
    display: flex;

    line-height: 30px;
    color: #e6e6e9ff;
    background-color: rgba(132, 0, 50, 1);
    
    border-style: double;
    border: 6px double #e6e6e9ff;

    height: auto;
    width: 55%;
    margin: auto;

    box-shadow: 2px 2px 7px 0 rgba(0, 0, 0, 0.3);
}

#info-card p {
    font-weight: bold;
    line-height: 10px;
    padding-bottom: 20px;
   
}

#info-card a {
    text-decoration: none;
    color: #e6e6e9ff;
}

.info-card-heading {
    color: #e6e6e9ff;
    font-size: 200%;
    padding-bottom: 20px;

}

#info-text {
    flex: 1 1 0;
    text-align: center;
    

    padding-top: 20px;
}

#info-text a:hover {
    border-bottom: 2px dashed #e6e6e9ff;
}

#info-text p:last-of-type {
    padding-bottom: 30px;
}

/* Footer */

footer {
    height: 150px;
}

footer p {
    text-align: center;
    color: #0c120cff;
    padding-bottom: 20px;
    font-style: italic;
}

.social-media, a {
    text-align: center;
    list-style: none;
    text-decoration: none;
}

.social-media > li {
    display: inline;
}

.social-media i {
    font-size: 160%;
    margin: 1%;
    padding: 5%;
    color: #0c120cff;
}

/* Gallery Flex Grid */

#gallery-text {
    border: 1px dashed var(--claret);
    padding: 30px;

    text-align: center;
    font-style: italic;
    color: var(--black-chocolate);

    display: flex;
    margin: auto;
    height: 50%;
    width: 50%;
    transform: translate(0%, 0%);
}

.gallery-grid {
    background: var(--white);
    padding: 0.5em;

    display: grid;
    grid-gap: 0.5em;
    grid-template-columns: 1fr 1fr;

}

.gallery-grid > div {
    align-items: space-evenly;
    display: flex;
}

.gallery-grid > div > img {
    width: 100%;
    align-items: center;
    display: flex;
}


/* Media Quaries */

/* Desktop Responsivity*/

@media screen and (min-width: 1024px) {
    
    /* Desktop Gallery*/

    .gallery-grid {
        padding: 5em 5em;

        grid-gap: 1em;
        grid-template-columns: 1fr 1fr 1fr 1fr;
        
    }

    /* Gallery Image Animation */

    .gallery-grid img {
        transition-duration: 200ms;
        transition-timing-function: ease-in-out;

        border: 6px double var(--claret);
    }

    .gallery-grid img:hover {
        transform: scale(1.2);
        transition-property: transform;
        transition-duration: 200ms;
        transition-timing-function: ease-in-out;
        transition-delay: 0s;
    }
}

